# name-engine

./: Cargo.toml  README.md
examples/: england.rs  england_evaluated.rs  english.rs  hokkaido.rs  japanese.rs  japanese_hokkaido.rs  us_evaluated.rs
examples/assets/: california.csv  england.csv  english.csv  hokkaido.csv  us.csv
src/: lib.rs  sorted_vec.rs
tests/: prototype.rs
