[package]
name = "name-engine"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "A Rust library for computing Markov chains to generate random names based on pronunciation"
authors = ["Teruki Tada <me@peruki.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.8.5"

[dependencies]
thiserror = "1.0.57"
